# MINI_DATA_PLATFORM

./: .dockerignore  .env.example  .gitignore  Docker-compose.yml  Dockerfile  README.md  generate-certs.sh  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: sonar-check.yml  sonar_check.yml  workflow.yml
dags/: __init__.py  process_sales_data_dag.py
dags/src/: __init__.py  pipeline.py
dags/src/ingestion/: __init__.py  minio_client.py
dags/src/loading/: __init__.py  postgres_loader.py
dags/src/loading/sql/: create_star_schema.sql
dags/src/transformation/: __init__.py  transformer.py
dags/src/utils/: __init__.py  helpers.py  notifications.py  schemas.py
dags/src/validation/: __init__.py  validator.py
data/raw/: batch_1_20250917_112821.csv  batch_2_20250917_112826.csv  batch_3_20250917_112831.csv  batch_4_20250917_112836.csv  batch_5_20250917_112841.csv  batch_6_20250917_112846.csv
docs/: api-reference.md  deployment.md  development.md  metabase.md  overview.md  security.md  setup.md  testing.md  troubleshooting.md
kes/config/: kes-config.yml  kes-config.yml.template
kes/policies/: kes-policy.json
scripts/: airflow-entrypoint.sh  airflow-init-db.sh  airflow-scheduler-entrypoint.sh  airflow-webserver-entrypoint.sh  init-kes-vault.sh  init-vault-secrets.sh  metabase-entrypoint.sh  minio-entrypoint.sh  postgres-airflow-init-vault.sh  postgres-init-vault.sh  security-check.sh
src/: data_generator.py
test/: test_data_generator.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_etl_pipeline.py
tests/integration/: __init__.py  conftest.py  test_ingestion_validation.py  test_validation_transformation.py
tests/unit/: test_helpers.py  test_ingestion.py  test_loading.py  test_notifications.py  test_pipeline.py  test_transformation.py  test_validation.py
